<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <include
        layout="@layout/header"
        ></include>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:text="@string/basics_photonics"
        android:background="@color/blue_d"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:onClick="OnClkBasics"
        style="@style/button_categorie_style"
        android:clickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:layout_weight="0.2"
        android:text="@string/photonics_for_ict"
        android:background="@color/green_d"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:onClick="OnClkPhotonicsForICT"
        style="@style/button_categorie_style" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:layout_weight="0.2"
        android:text="@string/photonics_for_energy"
        android:background="@color/yellow_d"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:onClick="OnClkEnergyLnD"
        style="@style/button_categorie_style" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:layout_weight="0.2"
        android:text="@string/photonics_for_security"
        android:background="@color/orange_d"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:onClick="OnClkSecurity"
        style="@style/button_categorie_style" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:layout_weight="0.2"
        android:text="@string/photonics_for_health"
        android:background="@color/red_d"
        android:onClick="OnClkHnlScience"
        style="@style/button_categorie_style" />
</LinearLayout>