<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:weightSum="0.6">
<include
    layout="@layout/header"
    ></include>

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:layout_weight="0.2"
    android:text="@string/understand"
    android:background="@color/background_default"
    android:textColor="@color/text_color"
    android:gravity="center"
    android:onClick="onCLKunderstand"
    android:id="@+id/understandTV"
    style="@style/button_categorie_style" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"	
    android:layout_weight="0.2"
    android:text="@string/experiment"
    android:background="@color/background_default"
    android:textColor="@color/text_color"
    android:gravity="center"
    android:onClick="onCLKexperiment"
    android:id="@+id/experimentTV"
    style="@style/button_categorie_style" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"	
    android:layout_weight="0.2"
    android:text="@string/quiz"
    android:background="@color/background_default"
    android:textColor="@color/text_color"
    android:gravity="center"
    android:onClick="OnCLKQuiz"
    android:id="@+id/quizTV"
    style="@style/button_categorie_style" />



</LinearLayout>