
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.android.nevyan.photonicsforall.Signup"
    android:orientation="vertical"
    android:background="@mipmap/background_accueuil"
    android:id="@+id/GeneralLL">
    <ScrollView android:id="@+id/ScrlView" android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:fillViewport="false">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/LL4ScrlView">
        <include layout="@layout/header"
            ></include>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/EditTextsLL"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">


                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="25dp">
                    <EditText
                        style="@style/edit_text_begin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:id="@+id/ETname"
                        android:inputType="text"
                        android:textSize="17dp"/>
                    <EditText
                        style="@style/edit_text_begin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:textSize="17dp"
                        android:id="@+id/ETsurname"
                        android:layout_marginTop="18dp"
                        android:layout_below="@+id/ETname"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:inputType="text"/>
                    <EditText
                        style="@style/edit_text_begin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textSize="17dp"
                        android:id="@+id/ETmail"
                        android:layout_marginTop="18dp"
                        android:layout_below="@+id/ETsurname"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:inputType="text"/>
                    <EditText
                        style="@style/edit_text_begin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:hint="@string/dob"
                        android:id="@+id/ETdob"
                        android:layout_marginTop="18dp"
                        android:layout_below="@+id/ETmail"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:inputType="text"/>

                </RelativeLayout>
            </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/botomLL"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">


            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2"
                android:src="@mipmap/signup_button"
                android:background="#00000000"
                android:layout_gravity="center"
                android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>

    </ScrollView>
</LinearLayout>

